--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   </head>
 
   <body>
-    <nav>
+    <nav class=" flex flex-row justify-around h-[71px] 
+    items-center bg-[#2688e7]">
       <h4 class="text-white">Ess.Maxwell</h4>
-      <div class="nav-items">
+      <div class="flex flex-row justify-evenly w-[70%]">
         <a class="text-white" href="#">Home</a>
         <a class="text-white" href="#">About</a>
         <a class="text-white" href="#">Services</a>
