--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <nav class=" flex flex-row justify-around h-[71px] 
-    items-center bg-[#2688e7]">
+    items-center bg-[#2688e7] fixed right-0 left-0">
       <h4 class="text-white">Ess.Maxwell</h4>
       <div class="flex flex-row justify-evenly w-[70%]">
         <a class="text-white" href="#">Home</a>
