new values added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   </head>
 
   <body>
-    <nav class=" flex flex-row justify-around h-[71px] 
-    items-center bg-[#2688e7] fixed right-0 left-0">
+    <nav
+      class="flex flex-row justify-around h-[71px] items-center bg-[#2688e7] fixed right-0 left-0"
+    >
       <h4 class="text-white">Ess.Maxwell</h4>
       <div class="flex flex-row justify-evenly w-[70%]">
         <a class="text-white" href="#">Home</a>
@@ -42,7 +43,14 @@
     <!-- hero section ends here -->
     <!-- about us section starts here -->
     <section class="flex flex-row justify-around w-[80%] mx-auto mt-[128px]">
-      <div></div>
+      <div>
+        <div>
+          <h4>ABOUT ME</h4>
+          <span>
+            <h2>MY STORY</h2>
+          </span>
+        </div>
+      </div>
     </section>
     <div class="W-[40%]">
       <img src="" alt="" />
